--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -108,7 +108,7 @@
     "# Convert frame.time to Datetime and create  1s Bins  \n",
     "df['frame.time'] = df['frame.time'].apply(lambda t: t[6:21])\n",
     "df['frame.time'] = pd.to_datetime(df['frame.time'], format='%H:%M:%S.%f')\n",
-    "df['frame.time'] = df['frame.time'].dt.round('100ms')\n",
+    "df['frame.time'] = df['frame.time'].dt.round('S')\n",
     "\n",
     "#################################################################################\n",
     "# Change Attack_types to Integers\n",
