--- a/knn.ipynb
+++ b/knn.ipynb
@@ -20,6 +20,10 @@
         }
       ],
       "source": [
+        "# Baseline Model\n",
+    "\n",
+    "In this notebook, we will build a baseline (Decision Tree) model for network intrusion malware classification. This will serve as the basis for comparision and evaluating the effectiveness of our deep learning models and methodology in subsequent notebooks.\n",
+    "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ]
